// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shoudl render invoices summary for a single invoice 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    invoice
     , with a total of 
    $2.35
  </h1>
</div>
`;

exports[`shoudl render invoices summary for multiple invocies 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    invoices
     , with a total of 
    $235,876.87
  </h1>
</div>
`;
